# gamepad-to-gpio

./: README.md  pyproject.toml
gamepad_to_gpio/: gamepad.py
tests/: test_gamepad_to_gpio.py
