[tool.poetry]
name = "gamepad-to-gpio"
version = "0.1.0"
description = ""
authors = ["Maarti <contact@maarti.net>"]

[tool.poetry.dependencies]
python = "^3.9"
inputs = "^0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
